--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,13 @@ body, html {
     padding: 0;
     margin: 0;
 }
+
+
+
+#cvLink {
+    transition: .2s transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+#cvLink:hover {
+    transform: scale(1.05);
+}
